config/referencegrant.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: enable-jack
  namespace: demo2
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: demo
  to:
    - group: ""
      kind: Service
      name: jack1
    - group: ""
      kind: Service
      name: jack2
