config/demo2.yml
apiVersion: v1
kind: Namespace
metadata:
  name: demo2
---
apiVersion: v1
kind: Service
metadata:
  name: jack1
  namespace: demo2
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
  selector:
    app: jack1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jack1
  namespace: demo2
  labels:
    app: jack1
spec:
  selector:
    matchLabels:
      app: jack1
  template:
    metadata:
      labels:
        app: jack1
    spec:
      containers:
      - name: jack1
        image: registry.k8s.io/e2e-test-images/agnhost:2.40
        command:
          - /agnhost
          - netexec
          - --http-port=8080
        ports:
          - containerPort: 8080
            name: http
        resources:
          requests:
            cpu: 10m
---
apiVersion: v1
kind: Service
metadata:
  name: jack2
  namespace: demo2
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
  selector:
    app: jack2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jack2
  namespace: demo2
  labels:
    app: jack2
spec:
  selector:
    matchLabels:
      app: jack2
  template:
    metadata:
      labels:
        app: jack2
    spec:
      containers:
      - name: jack2
        image: registry.k8s.io/e2e-test-images/agnhost:2.40
        command:
          - /agnhost
          - netexec
          - --http-port=8080
        ports:
          - containerPort: 8080
            name: http
        resources:
          requests:
            cpu: 10m
