config/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-echo
  namespace: demo
  annotations:
    konghq.com/strip-path: "true"
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: Exact
        value: /echo 
      headers:
        - name: person
          value: bob
    backendRefs:
    - name: bob
      kind: Service
      port: 80
  - matches:
    - path:
        type: Exact
        value: /echo
      headers:
      - name: person
        value: alice
    backendRefs:
    - name: alice
      kind: Service
      port: 80
  - matches:
    - path:
        type: Exact
        value: /echo
      headers:
        - name: person
          value: jack
    backendRefs:
    - name: jack1
      namespace: demo2
      kind: Service
      port: 80
      weight: 2
    - name: jack2
      namespace: demo2
      kind: Service
      port: 80
      weight: 1
